--- a/ngrx/code/posts-app/package.json
+++ b/ngrx/code/posts-app/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~10.0.2",
     "json-server": "^0.16.1",
     "rxjs": "~6.5.5",
+    "sass-pal": "^0.7.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
