Disable Google Analytics

--- a/ngrx/code/posts-app/angular.json
+++ b/ngrx/code/posts-app/angular.json
@@ -123,6 +123,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "posts-app"
+    }
+  },
+  "defaultProject": "posts-app",
+  "cli": {
+    "analytics": false
+  }
 }
