--- a/ngrx/code/posts-app/package.json
+++ b/ngrx/code/posts-app/package.json
@@ -20,6 +20,9 @@
     "@angular/platform-browser": "~10.0.2",
     "@angular/platform-browser-dynamic": "~10.0.2",
     "@angular/router": "~10.0.2",
+    "@fortawesome/angular-fontawesome": "^0.7.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.29",
+    "@fortawesome/free-solid-svg-icons": "^5.13.1",
     "json-server": "^0.16.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
