Add first datepicker

--- a/ngrx-material/fitness-app/angular.json
+++ b/ngrx-material/fitness-app/angular.json
@@ -127,5 +127,8 @@
       }
     }
   },
-  "defaultProject": "fitness-app"
+  "defaultProject": "fitness-app",
+  "cli": {
+    "analytics": false
+  }
 }
