Add fresh mannequin-ui library

--- a/angular/mannequin-ui/tsconfig.base.json
+++ b/angular/mannequin-ui/tsconfig.base.json
@@ -19,6 +19,10 @@
       "mannequin-lib": [
         "dist/mannequin-lib/mannequin-lib",
         "dist/mannequin-lib"
+      ],
+      "mannequin-ui": [
+        "dist/mannequin-ui/mannequin-ui",
+        "dist/mannequin-ui"
       ]
     }
   }
