--- a/angular/mannequin-ui/angular.json
+++ b/angular/mannequin-ui/angular.json
@@ -171,6 +171,46 @@
           }
         }
       }
+    },
+    "mannequin-ui": {
+      "projectType": "library",
+      "root": "projects/mannequin-ui",
+      "sourceRoot": "projects/mannequin-ui/src",
+      "prefix": "maq",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "projects/mannequin-ui/tsconfig.lib.json",
+            "project": "projects/mannequin-ui/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/mannequin-ui/tsconfig.lib.prod.json"
+            }
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/mannequin-ui/src/test.ts",
+            "tsConfig": "projects/mannequin-ui/tsconfig.spec.json",
+            "karmaConfig": "projects/mannequin-ui/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/mannequin-ui/tsconfig.lib.json",
+              "projects/mannequin-ui/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
     }},
   "cli": {
     "analytics": false
