--- a/angular/mannequin-ui/tsconfig.json
+++ b/angular/mannequin-ui/tsconfig.json
@@ -18,6 +18,12 @@
     },
     {
       "path": "./projects/mannequin-demo/tsconfig.spec.json"
+    },
+    {
+      "path": "./projects/mannequin-ui/tsconfig.lib.json"
+    },
+    {
+      "path": "./projects/mannequin-ui/tsconfig.spec.json"
     }
 ]
 }
