--- a/angular/mannequin-ui/angular.json
+++ b/angular/mannequin-ui/angular.json
@@ -3,53 +3,6 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "mannequin-lib": {
-      "projectType": "library",
-      "root": "projects/mannequin-lib",
-      "sourceRoot": "projects/mannequin-lib/src",
-      "prefix": "mq",
-      "architect": {
-        "build": {
-          "builder": "@linnenschmidt/build-ng-packagr:build",
-          "options": {
-            "tsConfig": "projects/mannequin-lib/tsconfig.lib.json",
-            "project": "projects/mannequin-lib/ng-package.json",
-            "assets": [
-              {
-                "glob": "**/*",
-                "input": "src/assets",
-                "output": "assets"
-              }
-            ]
-          },
-          "configurations": {
-            "production": {
-              "tsConfig": "projects/mannequin-lib/tsconfig.lib.prod.json"
-            }
-          }
-        },
-        "test": {
-          "builder": "@angular-devkit/build-angular:karma",
-          "options": {
-            "main": "projects/mannequin-lib/src/test.ts",
-            "tsConfig": "projects/mannequin-lib/tsconfig.spec.json",
-            "karmaConfig": "projects/mannequin-lib/karma.conf.js"
-          }
-        },
-        "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
-          "options": {
-            "tsConfig": [
-              "projects/mannequin-lib/tsconfig.lib.json",
-              "projects/mannequin-lib/tsconfig.spec.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
-          }
-        }
-      }
-    },
     "mannequin-demo": {
       "projectType": "application",
       "schematics": {
@@ -222,5 +175,5 @@
   "cli": {
     "analytics": false
   },
-  "defaultProject": "mannequin-lib"
+  "defaultProject": "mannequin-ui"
 }
