--- a/courses/angular-complete-guide/recipes-ngrx/package.json
+++ b/courses/angular-complete-guide/recipes-ngrx/package.json
@@ -7,7 +7,9 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "server:start": "json-server -w -c ./json-server/config.json ./json-server/db.json",
+    "server:delayed": "json-server -w -c ./json-server/config.json ./json-server/db.json -d 2000"
   },
   "private": true,
   "dependencies": {
@@ -22,8 +24,7 @@
     "core-js": "^3.1.2",
     "rxjs": "^6.0.0",
     "tslib": "^1.9.0",
-    "zone.js": "~0.8.26",
-    "bootstrap": "3.3.7"
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.800.0",
@@ -36,6 +37,7 @@
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
+    "json-server": "^0.17.0",
     "karma": "~4.0.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
