--- a/courses/angular-complete-guide/recipes-ngrx/package.json
+++ b/courses/angular-complete-guide/recipes-ngrx/package.json
@@ -29,6 +29,7 @@
     "@angular/compiler-cli": "~13.0.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jasmine-core": "~3.10.0",
