--- a/courses/angular-tdd/hoaxify/package.json
+++ b/courses/angular-tdd/hoaxify/package.json
@@ -26,13 +26,21 @@
     "@angular-devkit/build-angular": "^14.0.6",
     "@angular/cli": "~14.0.6",
     "@angular/compiler-cli": "^14.0.0",
+    "@testing-library/angular": "^12.1.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/user-event": "^14.2.6",
     "@types/jasmine": "~4.0.0",
+    "@types/jest": "^28.1.6",
     "jasmine-core": "~4.1.0",
+    "jest": "^28.1.3",
+    "jest-preset-angular": "^12.2.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.7.2"
+    "msw": "^0.44.1",
+    "typescript": "~4.7.2",
+    "whatwg-fetch": "^3.6.2"
   }
 }
