--- a/courses/firebase-in-depth/courses-app/.gitignore
+++ b/courses/firebase-in-depth/courses-app/.gitignore
@@ -1,5 +1,8 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+# Secrets
+/src/app/core/config/firebase.config.ts
+
 # Compiled output
 /dist
 /tmp
