--- a/workshops/sports-watcher-be/package.json
+++ b/workshops/sports-watcher-be/package.json
@@ -2,9 +2,9 @@
   "name": "sports-watcher-be",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "app/server.js",
   "scripts": {
-    "start": "nodemon ./server.js",
+    "start": "nodemon ./app/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "data:matches": "node ./scripts/matches-generator.js"
   },
@@ -17,7 +17,8 @@
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
