--- a/workshops/sports-watcher-be/package.json
+++ b/workshops/sports-watcher-be/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "nodemon ./app/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "data:matches": "node ./scripts/matches-generator.js"
+    "generate:matches": "node ./scripts/matches-generator.js",
+    "generate:secret": "node ./scripts/secret-generator.js"
   },
   "keywords": [
     "node",
@@ -17,6 +18,7 @@
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0"
   },
