--- a/workshops/sports-watcher-fe/tsconfig.json
+++ b/workshops/sports-watcher-fe/tsconfig.json
@@ -22,7 +22,15 @@
     "lib": [
       "ES2022",
       "dom"
-    ]
+    ],
+    "paths": {
+      "@app/*": [
+        "src/app/*"
+      ],
+      "@app/environment": [
+        "src/environments/environment.ts"
+      ],
+    },
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
