--- a/courses/firebase-in-depth/courses-app/package.json
+++ b/courses/firebase-in-depth/courses-app/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "firebase:local": "firebase emulators:start --only firestore --import firebase-testdata",
+    "firebase:local": "firebase emulators:start --only firestore,auth --import firebase-testdata",
     "firebase:export": "firebase emulators:export firebase-testdata"
   },
   "private": true,
